# ifc_app_porto

./: .gitignore  Cargo.toml  LICENSE
android/: BUILD_RUST.md  local.properties  settings.gradle.kts
android/.claude/: settings.local.json
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/ifc_viewer_app/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: Objekt_WC.ifc  Objekt_WC_Beh_.ifc  Objekt_Waschbecken.ifc
android/app/src/main/java/com/example/ifc_viewer_app/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
android/app/src/main/java/com/example/myapplication/: MainActivity.kt
android/app/src/main/java/com/example/myapplication/ar/: ARState.kt  ARViewModel.kt
android/app/src/main/java/com/example/myapplication/ffi/: IfcBridge.kt
android/app/src/main/java/com/example/myapplication/ui/: ARScreen.kt  BCFExporter.kt  BCFForm.kt  ElementBubbleMenu.kt  ElementDetailsSheet.kt  FixturePicker.kt  GuideCard.kt
android/app/src/main/java/uniffi/ifc_ar_core/: ifc_ar_core.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/values-v23/: themes.xml
android/app/src/test/java/com/example/ifc_viewer_app/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
ios/: project.yml
ios/IFCViewer/: ContentView.swift  IFCViewerApp.swift  Info.plist
ios/IFCViewer.xcodeproj/: project.pbxproj
ios/IFCViewer/AR/: ARContainerView.swift  ARSessionManager.swift  FloorGridEntity.swift  FloorPlanView.swift  IFCLoader.swift  WallPlaneEntity.swift
ios/IFCViewer/BCF/: BCFExporter.swift
ios/IFCViewer/Resources/: BaseRoom-v2.ifc  BaseRoom-v5.ifc  BaseRoom-v6.ifc  BaseRoom_v4-big.ifc  BaseRoom_v4-small.ifc
rust/ifc-ar-core/: Cargo.toml  build.rs
rust/ifc-ar-core/examples/: test_parse.rs
rust/ifc-ar-core/src/: color.rs  error.rs  floor_plan.rs  geometry.rs  gltf_export.rs  ifc_ar_core.udl  ifc_export.rs  lib.rs  metadata.rs  parser.rs  properties.rs  types.rs  wall.rs
rust/ifc-ar-core/tests/: export_metadata.rs
rust/ifc-ar-server/: Cargo.toml
rust/ifc-ar-server/src/: main.rs
test-fixtures/: BaseRoom-v2.ifc  Objekt WC.ifc  Objekt_WC_Beh_.ifc  Objekt_Waschbecken.ifc  WC Kern 1.ifc  WC_Kern_2.ifc
