[workspace]
members = [
    "rust/ifc-ar-core",
    "rust/ifc-ar-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[workspace.dependencies]
ifc-lite-core = { git = "https://github.com/louistrue/ifc-lite", version = "2.1.3" }
ifc-lite-geometry = { git = "https://github.com/louistrue/ifc-lite", version = "2.1.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uniffi = "0.28"
gltf-json = { version = "1", features = ["names"] }
nalgebra = "0.33"
rustc-hash = "1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
