[package]
name = "ifc-ar-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IFC AR viewer REST API server"

[dependencies]
ifc-ar-core = { path = "../ifc-ar-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip"] }
serde.workspace = true
serde_json.workspace = true
